--- a/index.html
+++ b/index.html
@@ -1,103 +1,117 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Fonte estilizada para o projeto GoogleFonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Javascript Materialize contendo os códigos da Super calculadora -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- CSS contendo os códigos da Super calculadora -->
-    <link href="css/materialize.css" type="text/css" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" />
     <!-- Javascript contendo os códigos da Super calculadora -->
     <script src="js/main.js"></script>
     <style>
       body {
-          font-family: 'Mukta', sans-serif;
+        font-family: 'Mukta', sans-serif;
       }
-      </style>
+    </style>
     <title>Super Calculadora</title>
-</head>
-<body>
-  <div class="row container">
-        <form class="col s12">
-          <div class=""><h1 class="center-align">Super Calculadora</h1></div> 
-          <div class="row">
-            <div class="input-field col s6">
-              <input placeholder="" id="NumberOne" type="text" value="3" onfocus="calcular()">
-              <label>Primeiro número (A):</label>
-            </div>
-            <div class="input-field col s6">
-              <input placeholder="" id="NumberTwo"  type="text" value="5" onblur="calcular()">
-              <label>Segundo número (B):</label>
-            </div>
+  </head>
+  <body>
+    <div class="row container">
+      <form class="col s12">
+        <div class=""><h1 class="center-align">Super Calculadora</h1></div>
+        <div class="row">
+          <div class="input-field col s6">
+            <input
+              placeholder=""
+              id="NumberOne"
+              type="text"
+              value="3"
+              oninput="calcular()"
+            />
+            <label>Primeiro número (A):</label>
           </div>
-          <br>
-          <div class="center-align"><h5>Cálculos</h5></div>
-          <br>
-          <div class="row">
-            <div class="input-field col s4">
-              <label class="active">Soma 1 (a + b):</label>
-              <input id="result" type="text" placeholder="" value="8"/>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result2" type="text" placeholder="" value="-2">
-              <label >Subtração 1 (a - b):</label>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result3" type="text" placeholder="" value="2">
-              <label >Subtração 2 (b - a):</label>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result4" type="text" placeholder="" value="15">
-              <label >Multiplicação (a x b):</label>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result5" type="text" placeholder="" value="0,6">
-              <label >Divisão 1 (a ÷ b):</label>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result6" type="text" placeholder="" value="1,67">
-              <label >Divisão 2 (b ÷ a):</label>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result7" type="text" placeholder="" value="9">
-              <label >Quadrado de a (a²):</label>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result8" type="text" placeholder="" value="25">
-              <label >Quadrado de b (b²):</label>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result9" type="text" placeholder="" value="1,3(2)">
-              <label >Divisores inteiros de a:</label>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result10" type="text" placeholder="" value="1,5(2)">
-              <label >Divisores inteiros de b:</label>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result11" type="text" placeholder="" value="6">
-              <label >Fatorial de a (a!):</label>
-            </div>
-
-            <div class="input-field col s4">
-              <input id="result12" type="text" placeholder="" value="120">
-              <label >Fatorial de b (b!):</label>
-            </div> 
-            
+          <div class="input-field col s6">
+            <input
+              placeholder=""
+              id="NumberTwo"
+              type="text"
+              value="5"
+              oninput="calcular()"
+            />
+            <label>Segundo número (B):</label>
           </div>
-        </form>
-   </div>
-</body>
+        </div>
+        <br />
+        <div class="center-align"><h5>Cálculos</h5></div>
+        <br />
+        <div class="row">
+          <div class="input-field col s4">
+            <label class="active">Soma 1 (a + b):</label>
+            <input id="result" type="text" placeholder="" value="8" />
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result2" type="text" placeholder="" value="-2" />
+            <label>Subtração 1 (a - b):</label>
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result3" type="text" placeholder="" value="2" />
+            <label>Subtração 2 (b - a):</label>
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result4" type="text" placeholder="" value="15" />
+            <label>Multiplicação (a x b):</label>
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result5" type="text" placeholder="" value="0,6" />
+            <label>Divisão 1 (a ÷ b):</label>
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result6" type="text" placeholder="" value="1,67" />
+            <label>Divisão 2 (b ÷ a):</label>
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result7" type="text" placeholder="" value="9" />
+            <label>Quadrado de a (a²):</label>
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result8" type="text" placeholder="" value="25" />
+            <label>Quadrado de b (b²):</label>
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result9" type="text" placeholder="" value="1,3(2)" />
+            <label>Divisores inteiros de a:</label>
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result10" type="text" placeholder="" value="1,5(2)" />
+            <label>Divisores inteiros de b:</label>
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result11" type="text" placeholder="" value="6" />
+            <label>Fatorial de a (a!):</label>
+          </div>
+
+          <div class="input-field col s4">
+            <input id="result12" type="text" placeholder="" value="120" />
+            <label>Fatorial de b (b!):</label>
+          </div>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
