--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input
               placeholder=""
               id="NumberOne"
-              type="text"
+              type="number"
               value="3"
               oninput="calcular()"
             />
@@ -40,7 +40,7 @@
             <input
               placeholder=""
               id="NumberTwo"
-              type="text"
+              type="number"
               value="5"
               oninput="calcular()"
             />
